[project]
name = "instagrapi-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Arolkar",email = "aditya.arolkar@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instagrapi (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
